--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "sass": "^1.43.3",
+    "typescript": "^4.4.3",
     "vite": "^2.5.7",
-    "vite-plugin-solid": "^2.0.3",
-    "typescript": "^4.4.3"
+    "vite-plugin-solid": "^2.0.3"
   },
   "dependencies": {
     "solid-app-router": "^0.1.9",
